--- a/app/public/Style.css
+++ b/app/public/Style.css
@@ -23,5 +23,19 @@
 }
 
  
+button.close {
+  margin: 0;
+  float: left;
+  }
+
+#match-img {
+  margin-left: auto;
+  margin-right: auto;
+  width: 16em;
+}
+
+.close {
+  float: left;
+}
 
   
